--- a/src/main/webapp/css/todos.css
+++ b/src/main/webapp/css/todos.css
@@ -1,6 +1,6 @@
 body {
 	font-family: "Trebuchet MS", "Helvetica", "Arial",  "Verdana", "sans-serif";
-	font-size: 62.5%;
+	font-size: 85%;
 }
 
 #container {
@@ -10,7 +10,8 @@ body {
 }
 
 #create-button, #update-button, #delete-button {
-	width: 50px;
+	width: 70px;
+	text-transform: uppercase;
 }
 
 #task-list .ui-selecting {
